--- a/platforms/browser/www/css/ashe.css
+++ b/platforms/browser/www/css/ashe.css
@@ -25,6 +25,7 @@ body {
 .pages {
     max-width: 1920px;
     min-width: 768px;
+    min-height: 768px;
     max-height: 1080px;
     overflow: hidden;
     position: relative;
@@ -54,6 +55,31 @@ body {
   color: #006699;
 }
 
+.liaison-box {
+  position: absolute;
+  bottom: 6%;
+  left: 0;
+  right: 0;
+  padding: 0px 4%;
+}
+
+.liaison-box h6 {
+  font-size: 19px;
+}
+
+.incyte-ref {
+        padding-left: 45px;
+}
+.incyte-ref h6 {
+        margin-top: 0;
+        padding-top: 10px;
+        position: absolute;
+}
+
+.tiny-text {
+  font-size: 15px;
+}
+
 /* START SCREEN */
 .start-screen div.container {
     position: absolute;
@@ -63,9 +89,16 @@ body {
     transform: translate(-50%, -50%);
 }
 
+div.start-screen .col-xs-6.text-center {
+  width: 49%;
+}
 div.start-screen div.container div.row div {
     background: rgba(255, 255, 255, 0.5);
-    border: 2px solid rgba(255, 255, 255, 0.3);
+    /*border: 2px solid rgba(255, 255, 255, 0.3);*/
+    margin: 1px 1px 0 0;
+}
+div.start-screen div.container div.row div:nth-child(3) {
+    border: 0;
 }
 div.start-screen div.container div.row div:hover {
     background: rgba(255, 255, 255, 0.25);
@@ -95,162 +128,33 @@ div.start-screen div.container div.row div {
     border-bottom-right-radius: 20px;
 }
 
+.data-video-wrapper {
+  position: relative;
+}
+.data-video-overlay img {
+        position: absolute;
+        top: 50%;
+        left: 505;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 99999999999999;
+}
+.data-video-overlay {
+        height: 100%;
+        width: 100%;
+/*        background: rgba(0, 0, 0, 1);
+*/        position: absolute;
+}
 
 /* PORTFOLIO */
 .portfolio-wrapper {
   background: rgba(255, 255, 255, .85);
   border-radius: 20px;
-  margin: 10px 42px;
+  margin: 10px 34px;
   padding: 15px;
   position: relative;
 }
 
-
-/* DISCOVER */
-.embed-responsive {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background: #000;
-}
-
-.white-overlay {
-    background-color: rgba(255, 255, 255, 0.75); 
-    height: 100%; 
-    width: 100%;
-}
-
-video#discover-screen-video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-}
-
-.discover-view h1 {
-    color: #006699;
-    font-weight: 700;
-    position: absolute;
-    top: 40%;    
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 100%;
-
-}
-.carousel {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 20px 0 0 50px;
-    margin-right: -50px;
-}
-
-.carousel-indicators {
-    position: absolute;
-    left: 165px;
-    top: 30px;
-    height: 20px;
-    width: 100px;
-    z-index: 9999;
-    margin-left: -4%;
-}
-.carousel-indicators li {
-    width: 15px;
-    height: 15px;
-    border: 1px solid #006699;
-}
-.carousel-indicators .active {
-    background-color: #006699;
-    width: 17px;
-    height: 17px;
-}
-
-.carousel-inner {
-        margin: 50px 0 0 -50px;
-}
-
-    /* HAMBURGER TO X */
-    #nav-toggle, #nav-toggle2 {
-            position: relative;
-            z-index: 9999;
-    /*        top: -40px;
-            left: 50px;*/
-    }
-    #nav-toggle2 {
-            top: 20px;
-            z-index: 9999999;
-    }
-        #nav-toggle,#nav-toggle2 { cursor: pointer; padding: 10px 35px 16px 0px; }
-        #nav-toggle span, #nav-toggle span:before, #nav-toggle span:after,
-        #nav-toggle2 span, #nav-toggle2 span:before, #nav-toggle2 span:after {
-          cursor: pointer;
-          border-radius: 1px;
-          height: 5px;
-          width: 35px;
-          background: #006699;
-          position: absolute;
-          display: block;
-          content: '';
-        }
-        #nav-toggle span:before, #nav-toggle2 span:before {
-          top: -10px; 
-        }
-        #nav-toggle span:after, #nav-toggle2 span:after {
-          bottom: -10px;
-        }
-
-        #nav-toggle span, #nav-toggle span:before, #nav-toggle span:after,
-        #nav-toggle2 span, #nav-toggle2 span:before, #nav-toggle2 span:after {
-          transition: all 250ms ease-in-out;
-        }
-        #nav-toggle.active span, #nav-toggle2.active span {
-          background-color: transparent;
-        }
-        #nav-toggle.active span:before, #nav-toggle.active span:after,
-        #nav-toggle2.active span:before, #nav-toggle2.active span:after {
-          top: 0;
-        }
-        #nav-toggle.active span:before, #nav-toggle2.active span:before {
-          -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-        }
-        #nav-toggle.active span:after, #nav-toggle2.active span:after {
-          -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-        }
-
-
-        div#video-player-control {
-            background: rgba(255, 255, 255, 0.75);
-            bottom: 0;
-            display: none;
-            height: 148px;
-            position: absolute;
-            width: 100%;
-        }
-
-
-    .video-on {
-        display: none;
-        margin: -15px 0 0 60px;
-    }
-    .disease-state-a .video-on {
-      display: block;
-      margin: 0 0 55px;
-      padding-bottom: 20px;
-    }
-
-
-.discover-rewind-btn {
-  margin: 0 10px;
-  vertical-align: top;
-/*  height: 38px;
-*/}
 /* PROGRESS BAR CSS */
       progress {
           -webkit-appearance: none;
@@ -261,9 +165,11 @@ video#discover-screen-video {
         border-radius: 9px;
         width: 80%;
         vertical-align: top;
-          margin-top: 10px;
+          margin-top: 16px;
       }
-
+      #progressbar6 {
+        width: 95%;
+      }
 
       progress[value]::-webkit-progressbar2 {
         background-color: #eee;
@@ -325,6 +231,10 @@ video#discover-screen-video {
         height: 20px;
       }
 
+      progress[value]#progressbar6 {
+        width: 95%;
+      }
+
       progress[value]::-moz-progressbar2 { 
         background-image:
           -moz-linear-gradient(
@@ -354,14 +264,11 @@ video#discover-screen-video {
         -webkit-appearance: none;
            -moz-appearance: none;
                 appearance: none;
-
         /* Get rid of default border in Firefox. */
         border: none;
-
         /* Dimensions */
         width: 80%;
         height: 15px;
-
         /* For IE10 */
         color: blue; 
       }
@@ -383,7 +290,6 @@ video#discover-screen-video {
         text-indent: -9999px;
       }
 
-
       .progress-full progress {
         width: 100%;
       }
@@ -402,7 +308,13 @@ video#discover-screen-video {
     color: #006699;
 }
 
-
+.goback-btn {
+        z-index: 9998;
+        cursor: pointer;
+        position: absolute;
+        top: 3px;
+        left: 115px;
+}
 /*********************
 DEVELOP
 *********************/
@@ -412,7 +324,7 @@ DEVELOP
 }
 
 .develop-view .container {
-  background: rgba(255, 255, 255, .85);
+  background: rgba(255, 255, 255, .6);
   border-radius: 20px;
   color: #006699;
   padding: 5%;
@@ -486,13 +398,14 @@ DEVELOP
     .disease-state-a .container-fluid.absolute-bottom {
       font-size: 20px;
       position: absolute;
-        bottom: 30px;
+        bottom: 15px;
       text-transform: uppercase;
       width: 100%;  
     }
     .disease-state-a p.well {
       background: rgba(255, 255, 255, 0.75);
       border-radius: 20px;
+      color: rgba(32, 120, 160, .85);
       padding: 35px;
     }
     .disease-state-a p.well.bg-blue,
@@ -519,6 +432,17 @@ DEVELOP
         position: absolute;
           bottom: 25%;
           right: 5%;
+            width: 45%;
+}
+
+.pop-up-div.studydesign {
+        bottom: 15%;
+        right: 9%;
+        z-index: 9999999998;
+}
+
+.pop-up-div ol {
+  padding-left: 12px;
 }
 
 .container-fluid.sd-main {
@@ -590,27 +514,20 @@ DEVELOP
 
   .sd-main .chevron-container.btm {     
       text-align: center;
-          position: absolute;
-          bottom: 10px;
+      position: absolute;
+      bottom: 10px;
       -webkit-transform: rotate(180deg);
       transform: rotate(180deg);
-        }
+      z-index: 999999999999;
+    }
 
 
 .sd-main .sd-main-content {
     overflow: hidden;
     overflow-y: scroll;
-    max-height: 502px;
-    margin: 50px 0;
+    max-height: 455px;
+    margin: 50px 0 97px;
 }
-/*.sd-main .sd-main-content {
-    -ms-overflow-style: none;  // IE 10+
-    overflow: -moz-scrollbars-none;  // Firefox
-}
-.sd-main .sd-main-content::-webkit-scrollbar { 
-    display: none;  // Safari and Chrome
-}*/
-
 
 .portofolio-purple, .portofolio-purple a {
   color: rgb(28,19,94);
@@ -623,7 +540,229 @@ DEVELOP
 }
 
 
-&lt;span class='portofolio-blue'&gt; 
+.scroll-wrapper {
+    max-height: 500px;
+}
+
+/* new portfolio css */
+.portfolio-top-nav {
+        font: 700 14px Helvetica, Arial, sans-serif;
+        position: absolute;
+        top: -25px;
+/*        width: 100%;
+*/}
 
 
-      &lt;/span&gt;"
+.portfolio-top-nav.one {
+        left: 293px;
+}
+.portfolio-top-nav.two {
+        left: 55%;
+        margin-left: 8px;
+}
+.portfolio-top-nav.three {
+        left: 78%;
+}
+.portfolio-top-nav.four {
+        left: 89%;
+}
+
+li.last {
+  position: absolute;
+    top: 0;
+    left: 89%;
+}
+
+/* PORTFOLIO POP-UP UPDATES */
+.data-link-wrapper {
+  display: inline-block;
+  overflow-y: auto;
+  vertical-align: top;
+  width: 40%;
+  max-height: 478px;
+  padding-right: 10px;
+}
+
+.data-video-wrapper {
+  display: inline-block;
+  float: right;
+  width: 58%;
+}
+
+.data-video-wrapper video {
+  width: 100%;
+}
+
+/* SURFACE */
+@media (max-width: 1440px) {
+  /* LANDSCAPE:
+  Windows Surface Pro*/
+  .container-fluid.sd-main h2 {
+    margin-bottom: 9px;
+  }  
+
+  .container-fluid.sd-main .col-xs-9 {
+    max-height: 530px;
+  }
+  .sd-main .sd-main-content {
+    max-height: 384px;
+  }
+  .liaison-box h6 {
+        font-size: 16px;
+}
+  .container-fluid.sd-main .col-xs-12 {
+     min-height: 176px;
+  }
+
+  /* PORTFOLIO */
+    .targeted-therapies-container {
+      margin-top: 15px;
+  }
+
+  div.progress {
+      height: 23px;
+      margin: 0 0 4px;
+  }
+  .targeted-therapies-container div.col-xs-2 {
+      height: 293px;
+  }
+  .immuno-therapies-container div.col-xs-2 {
+      height: 131px;
+  }
+  .non-oncology-container div.col-xs-2 {
+      height: 23px;
+  }
+  .partnered-container div.col-xs-2 {
+      height: 77px;
+  }
+  .portfolio-view .col-xs-2 h3 {
+      font-size: 18px;
+  }
+  .targeted-therapies-container li, .immuno-therapies-container li, .non-oncology-container li, .partnered-container li {
+        font-size: 15px;
+        line-height: 18px;
+        margin-top: 4px;
+        width: 170px;
+  }
+  .ipadH3 {
+    font-size: 20px;
+  }
+  .iPad-tiny-text {
+    font-size: 11px;
+      line-height: 12px;
+  }
+  .portfolio-top-nav {
+        font: 700 11px Helvetica, Arial, sans-serif;
+        top: -20px;
+  }
+.portfolio-top-nav.two {
+        left: 52%;
+}
+  .divider-line-one, .divider-line-two, .divider-line-three {
+        height: 565px;
+  }
+  div.progress-bar:after
+   {
+        border-width: 12px !important;
+  }
+  .discover-text {
+    height: 60%;
+  }
+}
+
+/* IPAD STYLES */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) { 
+  br.showDTOnly {
+    display: none;
+  }
+  .targeted-therapies-container {
+      margin-top: 15px;
+  }
+
+  div.progress {
+      height: 23px;
+      margin: 0 0 4px;
+  }
+  .targeted-therapies-container div.col-xs-2 {
+      height: 293px;
+  }
+  .immuno-therapies-container div.col-xs-2 {
+      height: 131px;
+  }
+  .non-oncology-container div.col-xs-2 {
+      height: 23px;
+  }
+  .partnered-container div.col-xs-2 {
+      height: 77px;
+  }
+  .portfolio-view .col-xs-2 h3 {
+      font-size: 18px;
+  }
+  .targeted-therapies-container li, .immuno-therapies-container li, .non-oncology-container li, .partnered-container li {
+        font-size: 13px;
+        line-height: 16px;
+        margin-top: 7px;
+        width: 170px;
+        margin-left: -7px;
+  }
+  .portfolio-top-nav.one {
+        left: 239px;
+}
+  .ipadH3 {
+    font-size: 20px;
+  }
+  .iPad-tiny-text {
+    font-size: 11px;
+      line-height: 12px;
+  }
+  .portfolio-top-nav {
+        font: 700 11px Helvetica, Arial, sans-serif;
+        top: -20px;
+  }
+
+  .divider-line-one, .divider-line-two, .divider-line-three {
+        height: 540px;
+  }
+  div.progress-bar:after
+   {
+        border-width: 12px !important;
+  }
+  .disease-state-a .container-fluid.absolute-bottom {
+    font-size: 14px;
+    bottom: -17px;
+  }
+  .container-fluid.sd-main {
+    margin: 0;
+  }
+  .container-fluid.sd-main h2 {
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+
+  .container-fluid.sd-main .col-xs-12 {
+    min-height: 185px;
+  }
+  .container-fluid.sd-main .col-xs-9 {
+    max-height: 557px;
+    width: 73%;
+  }
+  .sd-main .sd-main-content {
+    max-height: 410px;
+  }
+  .col-xs-9.primary-obj .liaison-box {
+        padding: 0 14%;
+  }
+
+  .targeted-therapies-container li:nth-child(2), .immuno-therapies-container li:nth-child(2), .non-oncology-container li:nth-child(2), .partnered-container li:nth-child(2) {
+        width: 95px;
+        margin-left: -30px;
+  }
+  .targeted-therapies-container li:nth-child(3), .immuno-therapies-container li:nth-child(3), .non-oncology-container li:nth-child(3), .partnered-container li:nth-child(3) {
+        margin-left: -15px;
+  }
+
+
+}
