--- a/platforms/browser/www/css/ashe.css
+++ b/platforms/browser/www/css/ashe.css
@@ -136,6 +136,7 @@ div.start-screen div.container div.row div {
         top: 50%;
         left: 505;
         left: 50%;
+        -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         z-index: 99999999999999;
 }
